bubbles-backend/src/main/knative/Service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: bubblebackend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  template:
    metadata:
      name: bubblebackend-1
    spec:
      containers:
      - image: quay.io/rhdevelopers/bubble-backend:v1.0
        ports:
        - containerPort: 8080
  traffic:
  - tag: v1
    revisionName: bubblebackend-1
    percent: 100
