bubbles-backend/src/main/knative/Route-to-v2.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: bubble-backend
spec:
  traffic:
    - revisionName: bubblebackend-1
      percent: 0 
    - revisionName: bubblebackend-2
      percent: 100
